Fix drag/drop icon in people > group area - icon is off center
Fixes: CNVS-37788

note: qa noticed the "+" button on the Unassigned Students
components was a bit off so this has been addressed in this
commit

test plan:
- as an admin/teacher navigate to a course then select the "people"
  link from the left-hand sub-nav
- select the second tab (which will be a group set name if one has
  been created)... if not - click the "+ Group Set" to create one
- within the group set click one of the groups (if there isn't a
  group - click the "+ Group" button to create one) ensure there is
  at least one student within the group in order to see the
  "group user" holder with the drag handle icon

  this fix was to remove the overriding reduced font size since
  it's throwing off the icon

Reviewed-on: https://gerrit.instructure.com/117322
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Product-Review: Pam Hiett <phiett@instructure.com>

--- a/app/stylesheets/jst/groups/manage/groupUsers.scss
+++ b/app/stylesheets/jst/groups/manage/groupUsers.scss
@@ -16,6 +16,8 @@
  * with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
+@import "base/environment";
+
 .group-user {
   border: 1px solid #ccc;
   background: #fff;
@@ -46,7 +48,7 @@
   right: 3px;
   top: 1px;
   i:before {
-    color: #aaa;
+    color: $ic-icon-link-color;
     font-size: 0.8em;
   }
   .icon-mini-arrow-down{
@@ -56,8 +58,8 @@
 
 .assign-to-group {
   position: absolute;
-  top: 0px;
-  right: 1px;
+  top: 1px;
+  right: 8px;
 }
 
 .group .group-users {
@@ -93,7 +95,7 @@
     width: 23.5%;
     margin: 0 1% 3px 0;
   }
-  
+
   .group-user-name {
     margin-right: 0;
   }
@@ -110,7 +112,6 @@
   overflow: hidden;
   white-space: nowrap;
   margin-right: 10px;
-  font-size: 0.9em;
   font-weight: bold;
   color: #777;
 }
